Revision history for Perl extension Fl

{{$NEXT}}

0.99.13 2016-06-27T15:31:43Z

    - Some smokers ignore prereqs>test>requires in META.json which causes
        tests to fail. Adding Test::NeedsDisplay to ...>configure>requires.

0.99.12 2016-06-27T06:07:58Z

    - Clipboard support
    - Begin work on custom widgets (undocumented alpha in this version)
        - draw() can be overridden
        - extends() creates inheratence trees and handles widget registration
        - handle() handles specific events. Ugh... See the docs...
    - Expanded export tags/values (get them all with :enum, of course):
        - :event - handle(...) event values are now exported now
        - :default - This tag is exported by default. I'll note these as the
            list grows
    - New demo scripts:
        - eg/double_click.pl - Custom button widget that detects double clicks
        - eg/drag_and_drop.pl - Example of clipboard access and drag and drop
    - New widgets:
        - Fl::Progress - Typical progress bar
        - Fl::InputChoice - Input widget and menu button rolled into one
        - Fl::Menu - Base class for all widgets that have a menu
        - Fl::MenuButton - Button that pops up a menu when pushed
        - Fl::HtmlView - Simple HTML viewer
    - New demo scripts:
        - eg/progress.pl - Demos using a Fl::Progress bar to keep user up to date on background progress
        - eg/input_choice.pl - Demos using Fl::InputChoice and enabling/disabling widgets
    - Some tests require a working DISPLAY on X11

0.99.11 2016-06-04T15:18:01Z

    - New widgets:
        - Fl::Tabs - "File card tabs" interface
        - Fl::Output - Simple display widget for single lines of text
        - Fl::MultilineOutput - Simple display widget for multiple lines of text
    - New demo scripts:
        - eg/tabs.pl - Demonstrates Fl::Tabs
        - eg/scrollbar.pl - Demonstrates Fl::Scrollbar and Fl::Output use

0.99.10 2016-06-04T00:08:58Z

    - New widgets: